Plans:
- Move over to cogs (2.0)
- Move over to slashcommands (2.0)
- Create KRW's Bot Template or smth | YellowTemplate 😈 (2.X)
- YellowBoombox (After major changes in 2.X of YellowToolbox)

1.8
- Switched over to TOML
- Moved config file to "files" folder
- Organized files
- Removed need to load config for each file
- Updated check_files function to support TOML
- Finally moved to real bool's
- Now TOML is required package
- For the infinite time changed variables order
- Removed configparser package
- Changed config loading to be global and localized inside bot_instance file
- Fixed forcenick_enabled (now it actually does anything)
- Moved over some initalization parts to global_setup
- Updated autoupdate code
- Renamed bot_instance to global_setup
- Moved gif related settings into its own section
- (Yes i know that setup.py doesnt work)
- Added an option disable reaction gifs
- Added an option to completly stop gif creation (lockdown)

1.7
- Updated update script to better handle config updates
- Made setting up the bot even easier (setup script and minor changes to check_files function)
- Added ASCII art on startup
- Improvements to checking files
- For the 999th time changed variable order
- Fixed pingdm sending dms to all users no matter if person was pinged or not
- "CMG", Now responding to a message with camera emoji also creates gif (toggleable)

1.6
- Moved req.txt to files folder
- Added changelog
- Added support for multiple id's in config
- Updated pingdm feature to include attachments
- Fixed quotes to use enabled variable
- Unified true/false checks
- Moved version variable into bot_instance file (for better readability)
- Updated variables

1.5
- Bot now doesnt crash on fresh installs (mostly)
- Russian roulette now has 2s delay
- Changed some line orders
- Readlog improvements
- Added "quote" command with some customizability
- Some comments in config
- __pycache__ auto remover

1.4
- Decreased size of "kys.gif"
- Cleared up variable names