@@ -1,7 +1,7 @@
-# Yellow Toolbox `pre-1.8`
+# Yellow Toolbox `1.8`
 
-[![Static Badge](https://img.shields.io/badge/Stable_Version-1.7-yellow)](https://github.com/KRWCLASSIC/YellowToolbox/tree/bfd789c3e0e9469d8c210ac35331394c98639fca)
-[![Static Badge](https://img.shields.io/badge/Code_Version-pre--1.8-yellow)](https://github.com/KRWCLASSIC/YellowToolbox)
+[![Static Badge](https://img.shields.io/badge/Stable_Version-1.8-yellow)](https://nolink.com)
+[![Static Badge](https://img.shields.io/badge/Code_Version-1.8-yellow)](https://github.com/KRWCLASSIC/YellowToolbox)
 [![Static Badge](https://img.shields.io/badge/Maintainer-KRWCLASSIC-green)](https://github.com/KRWCLASSIC)
 
 [![Static Badge](https://img.shields.io/badge/Current_State-Alpha-red)](where_u_goin_dawg)
@@ -13,7 +13,8 @@ This bot is designed to enhance your Discord server experience with a variety of
 <sub>"Code" Versions contain all the hotpatches and newest features, that might contain bugs!</sub>
 <details>
 <summary>Stable Versions:</summary>
-<a href="https://github.com/KRWCLASSIC/YellowToolbox/tree/bfd789c3e0e9469d8c210ac35331394c98639fca">Latest - 1.7</a><br>
+<a href="https://nolink.com">Latest - 1.8</a><br>
+<sub><a href="https://github.com/KRWCLASSIC/YellowToolbox/tree/bfd789c3e0e9469d8c210ac35331394c98639fca">1.7</a></sub><br>
 <sub><a href="https://github.com/KRWCLASSIC/YellowToolbox/tree/5192439a3dbbce54edde1440fac6ceee54754c0f">1.6</a></sub><br>
 <sub><a href="https://github.com/KRWCLASSIC/YellowToolbox/tree/9e04f9060edae2a102e37ae245e6c767b8328b5e">1.5</a></sub><br>
 <sub><a href="https://github.com/KRWCLASSIC/YellowToolbox/tree/d135c289d90f62d83e2993bc044af8af70682e83">1.4</a></sub><br>
